--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,8 @@ deploy-prod-infrastructure:
 
 
 # Applications deploy are basically the same, only change the TIER and path to watch for modifications
-.deploy-application:
+.deploy-application: &deploy-application
+  stage: application
   tags:
     - ansible-pull
     - application
@@ -47,33 +48,21 @@ deploy-prod-infrastructure:
 
 # Application backend
 deploy-prod-backend:
-  stage: application
+  <<: *deploy-application
   tags:
     - !reference [.deploy-application, tags]
     - backend
   environment: production
   variables:
     TIER: backend
-  rules:
-    - !reference [.deploy-application, rules]
-  before_script:
-    - !reference [.deploy-application, before_script]
-  script:
-    - !reference [.deploy-application, script]
 
 
 # Application frontend
 deploy-prod-frontend:
-  stage: application
+  <<: *deploy-application
   tags:
     - !reference [.deploy-application, tags]
     - frontend
   environment: production
   variables:
     TIER: frontend
-  rules:
-    - !reference [.deploy-application, rules]
-  before_script:
-    - !reference [.deploy-application, before_script]
-  script:
-    - !reference [.deploy-application, script]
