feat: Migrate tfstate from s3 to gitlab http store
New script yamlconfig created to have a simple command to read yaml in the Makefile

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ vault/deploy_token
 venv/
 logs/
 infrastructure/plan.out
+infrastructure/plan.cache
 infrastructure/plan.log
+infrastructure/*.tfstate
 infrastructure/.terraform/
 
