--- a/infrastructure/Makefile
+++ b/infrastructure/Makefile
@@ -1,6 +1,15 @@
 # Makefile
 .DEFAULT_GOAL:=help
 
+PYTHON=../venv/bin/python
+YAMLCONFIG=${PYTHON} ../utils/yamlconfig.py ../configuration.yml
+
+PROJECT_NAME:=$(shell ${YAMLCONFIG} project_name | tr '[:upper:]' '[:lower:]')
+PROJECT_ID:=$(shell ${YAMLCONFIG} git.project_id)
+TF_USERNAME:=$(shell ${YAMLCONFIG} git.username)
+TF_PASSWORD:=$(shell cat "../$(shell ${YAMLCONFIG} vault_path)/$(shell ${YAMLCONFIG} git.token_filename)")
+TF_ADDRESS="https://gitlab.com/api/v4/projects/${PROJECT_ID}/terraform/state/${PROJECT_NAME}"
+
 ifdef targets
 options := $(foreach target,$(targets),-target $(target))
 endif
@@ -22,7 +31,29 @@ help: ##@ Show this help.
 .PHONY: init
 init: ##@ Run terraform init.
 	terraform --version
-	terraform init
+	terraform init \
+	  -backend-config=address=${TF_ADDRESS} \
+	  -backend-config=lock_address=${TF_ADDRESS}/lock \
+	  -backend-config=unlock_address=${TF_ADDRESS}/lock \
+	  -backend-config=username=${TF_USERNAME} \
+	  -backend-config=password=${TF_PASSWORD} \
+	  -backend-config=lock_method=POST \
+	  -backend-config=unlock_method=DELETE \
+	  -backend-config=retry_wait_min=5
+
+.PHONY: migrate-state
+migrate-state: ##@ Run terraform init -migrate-state.
+##@		This command creates a local backup for the tfstate file and migrate the backend to a new location.
+	terraform --version
+	terraform init -migrate-state \
+	  -backend-config=address=${TF_ADDRESS} \
+	  -backend-config=lock_address=${TF_ADDRESS}/lock \
+	  -backend-config=unlock_address=${TF_ADDRESS}/lock \
+	  -backend-config=username=${TF_USERNAME} \
+	  -backend-config=password=${TF_PASSWORD} \
+	  -backend-config=lock_method=POST \
+	  -backend-config=unlock_method=DELETE \
+	  -backend-config=retry_wait_min=5
 
 
 .PHONY: plan
