--- a/playbooks/backend.yml
+++ b/playbooks/backend.yml
@@ -1,12 +1,12 @@
 ---
 
-- name: backend playbook
+- name: Backend playbook
   hosts: localhost
   become: true
 
   pre_tasks:
     - name: Include pre task
-      ansible.builtin.import_tasks: pre_tasks.yml
+      ansible.builtin.import_tasks: includes/pre_tasks.yml
 
   roles:
     - backend
