--- a/playbooks/frontend.yml
+++ b/playbooks/frontend.yml
@@ -1,12 +1,12 @@
 ---
 
-- name: frontend playbook
+- name: Frontend playbook
   hosts: localhost
   become: true
 
   pre_tasks:
     - name: Include pre task
-      ansible.builtin.include_tasks: pre_tasks.yml
+      ansible.builtin.include_tasks: includes/pre_tasks.yml
 
   roles:
     - frontend
