--- a/configuration.yml
+++ b/configuration.yml
@@ -16,4 +16,5 @@ git:
 
 # to be prefixed with the account_id and region ex: 123456789012-eu-central-1-terraform-backend-yunga
 terraform:
+  state_name: production
   backend_bucket: terraform-backend-yunga
