--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+ansible-lint==6.17.1
 boto3==1.26.151
 botocore==1.29.151
 python-hcl2==4.3.2
 PyYAML==6.0
+black==23.3.0
+isort==5.12.0
+pylint==2.17.4
