--- a/configuration.yml
+++ b/configuration.yml
@@ -11,7 +11,7 @@ data_device_name: /dev/sdf
 git:
   username: coati
   token_filename: yunga.deployment
-  repository_url: gitlab.com/jungle.ai/yunga.git
+  repository_url: gitlab.com/nueces/yunga.git
   project_id: 46745974
 
 # to be prefixed with the account_id and region ex: 123456789012-eu-central-1-terraform-backend-yunga
